Fixed z-index of toolbars

--- a/project/static/css/diagrams.css
+++ b/project/static/css/diagrams.css
@@ -105,7 +105,7 @@ main:not(.answered) .answer-actions {
 .search-wrapper,
 .actions {
     position: fixed;
-    z-index: 10;
+    z-index: 11;
     left: 50%;
     transform: translateX(-50%);
     width: 100%;
